fix: theme switch to be invisible

--- a/index.css
+++ b/index.css
@@ -147,6 +147,7 @@ html {
   position: absolute;
   height: 0;
   width: 0;
+  opacity: 0;
 }
 
 .theme-switch:checked ~ .app {
